--- a/src/components/LayerSelector.css
+++ b/src/components/LayerSelector.css
@@ -33,7 +33,7 @@
 	border-radius: 4px;
 	padding: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 300px;
+  width: 300px;
 }
 .section-title-container {
 	text-align: center;
@@ -69,20 +69,28 @@
 }
 
 .filter-container {
-	display: flex;
-	flex-direction: column;
+	padding: 3px;
+	max-width: 300px;
+	max-height: 300px;
+	overflow-y: auto;
 }
 
 .filter-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+	margin-bottom: 9px;
+	padding: 7px;
+	border: 2px solid #eee;
+	border-radius: 4px;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	font-size: 14px;
+	color: #333;
 }
 
-.filter-checkbox {
-    margin-right: 8px;
+.filter-item:hover {
+	background-color: #f8f8f8;
 }
 
-.filter-label {
-	margin: 0;
+.filter-item.selected {
+	border-color: #6dacee;
+	background-color: #e6f2ff;
 }
