--- a/src/components/LayerSelector.css
+++ b/src/components/LayerSelector.css
@@ -10,6 +10,7 @@
 	border: solid 1px black;
 	border-radius: 22.5px;
 	cursor: pointer;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .toggle-button:hover {
 	background-color: black;
