--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,40 +1,53 @@
-.search-button {
+/* Overall widget */
+.esri-search {
 	position: absolute;
-	top: 15px;
-  right: 60px;
-	z-index: 1000;
-	width: 40px;
+	top: 0px;
+	right: 100px;
 	height: 40px;
-	background-color: white;
-	color: white;
-	border: solid 1px black;
 	border-radius: 20px;
+	width: 300px !important;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1) !important;
+}
+
+/* Input field */
+.esri-search__input {
+	border-radius: 20px;
+	height: 40px !important;
+	padding-left: 15px !important;
+}
+
+/* Search button */
+.esri-search__submit-button {
+	position: absolute;
+	right: -50px;
+	width: 40px !important;
+	height: 40px !important;
+	background-color: white !important;
+	color: black !important;
+	border: solid 1px black !important;
+	border-radius: 20px !important;
 	cursor: pointer;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1) !important;
 }
-.search-button:hover {
-	background-color: black;
-	.toggle-icon-button {
-		color: white;
-	}
-	.search-icon-button {
-		color: white;
-	}
+
+.esri-icon-search {
+	font-size: 20px !important;
+	line-height: 40px !important;
 }
-.search-icon-button {
-	width: 20px;
-	height: 20px;
-	color: black;
+
+.esri-search__submit-button:hover {
+	background-color: black !important;
+	color: white !important;
 }
-.search-bar-container{
-  position: absolute;
-  top: 13px;
-  right: 110px;
-  height: 40px;
-  width: 300px;
-  z-index: 999;
-  background-color: white;
-  border: solid 1px black;
-  border-radius: 20px;
-  padding-left: 20px;
-  font-size: 15px;
+
+/* Clear button */
+.esri-search__clear-button {
+	border-radius: 20px;
+	height: 40px !important;
+	width: 40px !important;
+}
+
+.esri-search__suggestions-menu {
+	border-radius: 10px;
+	margin-top: 3px !important;
 }
