--- a/src/components/AnalysisComponent.css
+++ b/src/components/AnalysisComponent.css
@@ -1,18 +1,74 @@
 .analysis {
-    height: 200px; 
-    overflow-y: auto;
-    background-color: #fff;
-    padding: 10px;
-    /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
-    border-radius: 5px;
+	position: absolute;
+	top: calc(50% - 48vh);
+	left: 340px;
+	width: 350px;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+	padding: 10px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	overflow: hidden;
+	max-height: calc(60%);
 }
-
+.analysis-title {
+	text-align: center;
+	font-size: 18px;
+	font-weight: bold;
+}
+.sort-buttons-container {
+	height: 30px;
+	margin-bottom: 20px;
+	display: flex;
+	justify-content: center;
+}
+.sort-buttons {
+	height: 30px;
+	margin: 5px;
+	background-color: white;
+	border: 1px solid black;
+	border-radius: 4px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.sort-buttons:hover,
+.find-closest-infrastructure-button:hover {
+	background-color: #f3f3f3;
+	cursor: pointer;
+}
+.no-infrastructure-text {
+	margin-top: 20px;
+	margin-bottom: 15px;
+	text-align: center;
+	font-size: 14px;
+	font-weight: bold;
+}
 .analysis ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	overflow-y: auto;
+	max-height: calc(100% - 40px);
 }
-
 .analysis li {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
+	padding: 10px;
+	border: 1px solid #eee;
+	border-radius: 4px;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+	font-size: 15px;
+}
+.find-closest-infrastructure-container {
+	display: flex;
+	justify-content: center;
+}
+.find-closest-infrastructure-button {
+	height: 30px;
+	margin: 5px;
+	background-color: white;
+	border: 1px solid black;
+	border-radius: 4px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
