--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,57 +1,26 @@
-.menu {
-    padding: 18 px;
-    width: 90%;
-    height: 90%;
-}
-
-.menu h2 {
-    margin-bottom: 20px;
-    font-size: 20px;
-    color: #333;
+.menu-title {
+	text-align: center;
+	font-size: 18px;
+	font-weight: bold;
 }
 
 .menu-item {
-    margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .menu-item label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
+	display: block;
+	margin-bottom: 5px;
+	font-weight: bold;
 }
 
 .menu-item select,
 .menu-item input[type="checkbox"] {
-    width: 100%;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+	width: 100%;
+	padding: 5px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
 }
-
-.menu-separator {
-    margin: 20px 0;
-    border: 0;
-    border-top: 1px solid #ccc;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-ul li {
-    margin-bottom: 10px;
-}
-
-ul li label {
-    margin-left: 5px;
-}
-
-.menu-item-inline {
-    display: flex;
-    align-items: center;
-}
-
-.menu-item-inline input[type="checkbox"] {
-    margin-right: 10px;
+.basic-multi-select .select__menu {
+	z-index: 1001;
 }
