--- a/src/styles.css
+++ b/src/styles.css
@@ -1,113 +1,96 @@
 .app {
-    display: flex;
-    height: 100vh;
+	height: 100vh;
 }
-
-.menu-container {
-    width: 16%;
-    background-color: #f8f8f8;
-
-    /* box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); */
-
-}
-
-.menu-inner {
-    padding: 10px;
-    background-color: #f8f8f8;
-}
-
 .main-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
+	position: relative;
+	height: 100vh;
 }
-
-.analysis-container {
-    flex: 1;
-    background-color: #f0f0f0;
-    padding: 10px;
-    /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
-    z-index: 1;
-}
-
 .map-wrapper {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 }
-
 .map-container {
-    flex: 4;
-    height: calc(100% - 20px);
-    padding: 10px;
-    position: relative;
-    overflow: hidden;
-    background-color: #f0f0f0;
-    /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
-    height: 100%;
-    min-height: 400px;
-
-
+	position: relative;
+	overflow: hidden;
+	background-color: #f0f0f0;
+	height: 100%;
 }
-
 .map-view {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
+}
+.advance-selection-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1000;
+	margin: 0;
+	width: 320px;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
 }
 
-
-.layer-list-wrapper {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: white;
-    border: 1px solid #ccc;
-    padding: 10px;
-    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); */
-    z-index: 10;
+.advance-selection {
+	text-align: center;
+	z-index: 1000;
+	background: white;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+	padding: 10px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	width: 300px;
+	max-height: calc(80%);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
-.layer-group {
-    margin-bottom: 10px;
+.advance-selection-visible {
+	transform: translateX(0);
+	transition: transform 0.3s ease-in-out;
 }
 
-.layer-group-header {
-    font-weight: bold;
-    cursor: pointer;
+.advance-selection-nonvisible {
+	transform: translateX(-100%);
+	transition: transform 0.3s ease-in-out;
 }
 
-.layer-group-content {
-    margin-left: 10px;
+.advance-selection-toggle {
+	background-color: white;
+	height: 100px;
+	width: 20px;
+	border-top-right-radius: 8px;
+	border-bottom-right-radius: 8px;
+	border-top: 1px solid rgb(160, 159, 159);
+	border-right: 1px solid rgb(160, 159, 159);
+	border-bottom: 1px solid rgb(160, 159, 159);
+	cursor: pointer;
+	position: absolute;
+	bottom: 0px;
+	right: -20px;
+	transform: translateY(-50%);
+	z-index: 999;
+	display: flex;
+	align-items: center;
 }
 
-.layer-item {
-    margin-bottom: 5px;
+.advance-selection-toggle:hover {
+	cursor: pointer;
 }
 
-.menu {
-    padding: 10px;
+.clear-route-button {
+	margin-top: 10px;
+	padding: 10px;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	z-index: 1000;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
-.menu ul {
-    list-style: none;
-
-    padding: 0;
-}
-
-.menu li {
-    margin-bottom: 10px;
-}
-
-.menu label {
-    margin-left: 5px;
-}
-
-
-.layer-selector-wrapper {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    z-index: 1000;
-    pointer-events: none;
+.clear-route-button:hover {
+	background-color: #f3f3f3;
+	cursor: pointer;
 }
