--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,41 @@
 .app {
 	height: 100vh;
 }
+
 .main-container {
 	position: relative;
 	height: 100vh;
 }
+
 .map-wrapper {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
 }
+
 .map-container {
 	position: relative;
 	overflow: hidden;
 	background-color: #f0f0f0;
 	height: 100%;
 }
+
 .map-view {
 	width: 100%;
 	height: 100%;
 }
+
+.clear-route-button {
+	width: inherit;
+	margin-top: 10px;
+	padding: 10px;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	z-index: 1000;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
 .advance-selection-container {
 	position: absolute;
 	top: 0;
@@ -81,16 +97,69 @@
 	cursor: pointer;
 }
 
-.clear-route-button {
-	margin-top: 10px;
-	padding: 10px;
-	background-color: white;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-	z-index: 1000;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
+
 .clear-route-button:hover {
 	background-color: #f3f3f3;
 	cursor: pointer;
+	
+}
+
+.analysis-container {
+    position: absolute;
+    top: 60px; 
+	bottom: 60px;
+    right: 0;
+    z-index: 1000;
+    margin: 0;
+    width: 350px;
+    max-height: 70vh; 
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.analysis-visible {
+    transform: translateX(0);
+    transition: transform 0.3s ease-in-out;
+}
+
+.analysis-hidden {
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.analysis-content {
+    text-align: center;
+    z-index: 1000;
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 330px;
+    max-height: calc(70vh - 20px);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow-y: auto;
+}
+
+.analysis-toggle {
+    background-color: white;
+    width: 20px;
+    height: 100px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-top: 1px solid rgb(160, 159, 159);
+    border-left: 1px solid rgb(160, 159, 159);
+    border-bottom: 1px solid rgb(160, 159, 159);
+    cursor: pointer;
+    position: absolute;
+    top: 50%; 
+    left: -20px;
+    transform: translateY(-50%);
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
