--- a/src/styles.css
+++ b/src/styles.css
@@ -26,14 +26,21 @@
 }
 
 .clear-route-button {
-	width: inherit;
-	margin-top: 10px;
-	padding: 10px;
-	background-color: white;
+	width: 100%;
+	margin-bottom: 20px;
+	padding: 8px 12px;
+	background-color: #f0f0f0;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	z-index: 1000;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	font-size: 14px;
+	cursor: pointer;
+	transition: all 0.3s ease;
+}
+
+.clear-route-button:hover {
+    background-color: #e0e0e0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
 
 .advance-selection-container {
@@ -57,11 +64,30 @@
 	border-radius: 8px;
 	padding: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	width: 300px;
-	max-height: calc(80%);
+	width: 310px;
+	max-height: 77vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
+	overflow-y: auto;
+}
+
+.advance-selection::-webkit-scrollbar {
+	width: 8px;
+}
+
+.advance-selection::-webkit-scrollbar-track {
+	background: #f1f1f1;
+	border-radius: 4px;
+}
+
+.advance-selection::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 4px;
+}
+
+.advance-selection::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
 
 .advance-selection-visible {
@@ -97,69 +123,63 @@
 	cursor: pointer;
 }
 
-
-.clear-route-button:hover {
-	background-color: #f3f3f3;
-	cursor: pointer;
-	
-}
-
 .analysis-container {
-    position: absolute;
-    top: 60px; 
+	position: absolute;
+	top: 60px;
 	bottom: 60px;
-    right: 0;
-    z-index: 1000;
-    margin: 0;
-    width: 350px;
-    max-height: 70vh; 
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+	right: 0;
+	z-index: 1000;
+	margin: 0;
+	width: 350px;
+	max-height: 70vh;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	background-color: blue;
 }
 
 .analysis-visible {
-    transform: translateX(0);
-    transition: transform 0.3s ease-in-out;
+	transform: translateX(0);
+	transition: transform 0.3s ease-in-out;
 }
 
 .analysis-hidden {
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
+	transform: translateX(100%);
+	transition: transform 0.3s ease-in-out;
 }
 
 .analysis-content {
-    text-align: center;
-    z-index: 1000;
-    background: white;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 330px;
-    max-height: calc(70vh - 20px);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    overflow-y: auto;
+	text-align: center;
+	z-index: 1000;
+	background: white;
+	border: 1px solid #ccc;
+	border-radius: 8px;
+	padding: 10px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	width: 330px;
+	max-height: calc(70vh - 20px);
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	overflow-y: auto;
 }
 
 .analysis-toggle {
-    background-color: white;
-    width: 20px;
-    height: 100px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    border-top: 1px solid rgb(160, 159, 159);
-    border-left: 1px solid rgb(160, 159, 159);
-    border-bottom: 1px solid rgb(160, 159, 159);
-    cursor: pointer;
-    position: absolute;
-    top: 50%; 
-    left: -20px;
-    transform: translateY(-50%);
-    z-index: 999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	background-color: white;
+	width: 20px;
+	height: 100px;
+	border-top-left-radius: 8px;
+	border-bottom-left-radius: 8px;
+	border-top: 1px solid rgb(160, 159, 159);
+	border-left: 1px solid rgb(160, 159, 159);
+	border-bottom: 1px solid rgb(160, 159, 159);
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	left: -20px;
+	transform: translateY(-50%);
+	z-index: 999;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
