--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -50,3 +50,32 @@
 	border-radius: 10px;
 	margin-top: 3px !important;
 }
+
+.custom-clear-button {
+	position: absolute;
+	top: 0px;
+	right: 50px;
+	/* Adjusted to make room for the layer selector */
+	width: 40px !important;
+	height: 40px !important;
+	background-color: white !important;
+	color: black !important;
+	border: solid 1px black !important;
+	border-radius: 20px !important;
+	cursor: pointer;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1) !important;
+	font-size: 14px !important;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 1000;
+	/* Ensure it's above other elements */
+}
+
+.custom-clear-button:hover {
+	background-color: #f3f3f3 !important;
+}
+/* Adjust search bar position if needed */
+.esri-search {
+	right: 150px; /* Moved further right to accommodate the clear button */
+  }
