--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import "https://js.arcgis.com/4.30/@arcgis/core/assets/esri/themes/light/main.css";
+/* @import "https://js.arcgis.com/4.30/@arcgis/core/assets/esri/themes/light/main.css";
 
 html,
 body,
@@ -22,4 +22,4 @@ body,
 
 .esri-attribution {
 	display: none !important;
-}
+} */
