--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,30 @@
+@import "https://js.arcgis.com/4.30/@arcgis/core/assets/esri/themes/light/main.css";
+
+html,
+body,
+#root {
+	padding: 0;
+	margin: 0;
+	height: 100%;
+	width: 100%;
+}
+
+.App {
+	display: flex;
+	height: 100vh;
+}
+
+.MapContainer {
+	flex: 1;
+	position: relative;
+	height: 100%;
+}
+
+.esri-attribution {
+	display: none !important;
+}
+
+
 .app {
 	height: 100vh;
 }
