--- a/src/components/AnalysisComponent.css
+++ b/src/components/AnalysisComponent.css
@@ -1,7 +1,8 @@
-.analysis{
+.analysis {
     margin-right: 10px;
     background-color: white;
 }
+
 .analysis-title {
     text-align: center;
     font-size: 20px;
@@ -114,4 +115,23 @@
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
+}
+
+
+.search-route-button {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 8px 12px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.search-route-button:hover {
+    background-color: #e0e0e0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
 }
